seed feed with an initial value

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="app">
-        <div id="quiz"></div>
+        <div id="quiz">Welcome</div>
         <button id="show">Show</button>
         <button id="next">Next</button>
     </div>
