remove extraneous show button, change show behavior to mousedown/mouseup

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 </head>
 <body>
     <div id="app">
-        <div id="quiz">Welcome</div>
-        <button id="show">Show</button>
-        <button id="next">Next</button>
+        <h1 id="quiz" onmousedown="showNotes()" onmouseup="showName()"></h1>
+        <button id="next" onclick="nextCard()">Next</button>
     </div>
 </body>
 </html>
