--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="app">
-        <button id="show" onmousedown="showNotes()" onmouseup="showName()">Show</button>
+        <button id="show" onclick="showToggle()">Show</button>
         <button id="next" onclick="nextCard()">Next</button>
         <h1 id="content"></h1>
     </div>
