--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Flashchords</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Flashchords</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
 </head>
 <body>
-  <div id="app">
-    <button id="next" onclick="nextCard()">Next</button>
-    <div class="container">
-      <div class="card">
-        <div class="front"></div>
-        <div class="back"></div>
-      </div>
+    <div id="app">
+        <button id="show" onclick="showToggle()">Show</button>
+        <button id="next" onclick="nextCard()">Next</button>
+        <h1 id="content"></h1>
     </div>
-  </div>
 </body>
 </html>
