add an additional mode where you can either spell or name the chords - this mode begins the app. to change the setting, refresh the page

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     <script src="main.js"></script>
 </head>
 <body>
-  <button onclick="nextCard()">Next</button>
-  <section class="container">
+  <div class="mode">
+    <button onclick="selectMode(this)">Name</button>
+    <br />
+    <button onclick="selectMode(this)">Spell</button>
+  </div>
+  <div class="app" style="display: none">
+    <section class="container">
       <div class="card" onclick="flip()">
         <div class="front">1</div>
         <div class="back">2</div>
       </div>
     </section>
+    <button onclick="nextCard()">Next</button>
+  </div>
 </body>
 </html>
