--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div class="app" style="display: none">
     <section class="container">
       <div class="card" onclick="flip()">
-        <div class="front">1</div>
-        <div class="back">2</div>
+        <div class="front"></div>
+        <div class="back"></div>
       </div>
     </section>
     <button onclick="nextCard()">Next</button>
